devops/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: shipay
  labels:
    shared-gateway-access: "true"
    environment: shipay
